[package]
name = "json_walker"
version = "0.1.0"
edition = "2021"
authors = ["Arash <arash.re.12@protonmail.com>"]
keywords = ["json", "deserialize", "stream"]
license = "MIT"
description = "JSON stream parser and deserializer. In this package you decide what part of json must be parsed"
homepage = "https://github.com/Arash-Rezaie/json_walker"
repository = "https://github.com/Arash-Rezaie/json_walker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true }

[features]
deserialize = ["dep:serde"]

[dev-dependencies]
ctor = "0.2.6"
panic-message = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
regex = "1.10.3"